# cognits

./: .gitignore  AGENTS.md  CHANGELOG.md  CONVERSACIÓN_CON_LA_IDEA.md  DESIGN.md  IDEA.md  LICENSE  README.md  ROADMAP-0.0.6.md  opencode.jsonc  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.opencode/agents/: skill-writer.md
.opencode/commands/: lint.md  test.md
.opencode/skills/deepseek-api/: SKILL.md
.opencode/skills/go-conventions/: SKILL.md
.opencode/skills/multi-agent-tools/: SKILL.md
.opencode/skills/solidjs-patterns/: SKILL.md
.opencode/skills/sqlite-fts5/: SKILL.md
.opencode/skills/sse-streaming/: SKILL.md
.opencode/skills/tailwind-v4/: SKILL.md
docs/specs/: 0.0.7-0.0.8-bringforward.md  0.0.7-hardening.md  phase-0-shutdown.md  phase-1-storage.md  phase-2-server.md  phase-3-agent.md  phase-4-mastery.md  phase-5-sqlite-vec.md  phase-6-hybrid-search.md  phase-7-pedagogy-engine.md  phase-8-frontend.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  FileTree.tsx  FileTreeWrapper.tsx  highlight-theme.css  index.css  index.tsx  tabs.ts  types.ts
frontend/src/__tests__/: chat-stream.test.ts  components.test.ts  markdown.test.ts
frontend/src/components/: Chat.tsx  CodeView.tsx  CollapsibleSection.tsx  ContextMenu.tsx  DragOverlay.tsx  Dropdown.tsx  ImageView.tsx  LearnitView.tsx  MarkdownView.tsx  MasteryDashboard.tsx  NoteView.tsx  PdfView.tsx  ReportView.tsx  Sessions.tsx  Settings.tsx  SetupWizard.tsx  SkillsTree.tsx  SliderField.tsx  StreamingMarkdown.tsx  StreamingMessage.tsx  TabBar.tsx  (+4 more)
legacy/: .air.toml  .goreleaser.yaml  build.sh  dev.sh  go.mod  go.sum  install.sh
scripts/: build.sh  dev.sh  dev_judge_tree.py  dev_run_skill_planner.py  dev_run_skill_tree_cases.py  test_install.sh
src/cognits/: __init__.py  __main__.py  bootstrap.py  cli.py  constants.py  docling_engine.py  main.py  paths.py  tinyfish.py  tools.py  tui.py
tests/: _legacy.py  conftest.py  test_agent.py  test_agent_loader.py  test_app.py  test_apply_profile.py  test_assessment.py  test_chat_service.py  test_chunker.py  test_chunker_v2.py  test_crypto.py  test_database.py  test_db.py  test_deepseek.py  test_deploy_cancel.py  test_evaluator.py  test_exceptions.py  test_files.py  test_fire.py  test_fsdetect.py  test_learner_model.py  test_learner_state_repo.py  test_learning_flow_e2e.py  test_main_split.py  test_onboarding_skill_tree.py  test_pedagogical_plan.py  test_pedagogy.py  test_persistence.py  test_planner.py  test_planning_mode.py  test_rag_backfill.py  test_rag_engine.py  test_reports.py  test_routes_config.py  test_routes_files.py  test_routes_misc.py  test_routes_notes.py  test_routes_reports.py  test_routes_sessions.py  test_routes_study.py  (+15 more)
(+268 files in other folders)
