[project]
name = "cognits"
version = "0.0.1"
description = "Cognits — Context-Oriented Generation for Neural Intelligent Tutoring Systems. Tutor personal multiagente con IA."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "AGPL-3.0-or-later"
authors = [{ name = "Eduardo Suárez", email = "eduardosrez@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "cryptography>=42",
    "chromadb==1.5.9",
    "fastembed==0.8.0",
]

[project.scripts]
cognits = "cognits.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognits"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "pyproject.toml"]

[dependency-groups]
dev = ["pytest>=8"]
