[project]
name = "cognits"
version = "0.0.5"
description = "Cognits — Context-Oriented Generation for Neural Intelligent Tutoring Systems. Multi-agent AI personal tutor."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "Eduardo Suárez", email = "edusrez@proton.me" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "cryptography>=42",
    "chromadb==1.5.9",
    "fastembed==0.8.0",
    "rich>=13",
    "textual>=2",
    "markitdown[pdf]>=0.1.6",
]

[project.scripts]
cognits = "cognits.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognits"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "pyproject.toml"]

[dependency-groups]
dev = ["pytest>=8"]
